--- a/templates/chat.html
+++ b/templates/chat.html
@@ -39,8 +39,7 @@
                             </div>
                             <div class="dropdown-menu" id="dropdown-menu4" role="menu">
                                 <div class="dropdown-content">
-                                    <a class="dropdown-item is-active"> All </a>
-                                    <a class="dropdown-item"> Booking Chats </a>
+                                    <a class="dropdown-item is-active"> All</a>
                                     <a class="dropdown-item"> Archived </a>
                                 </div>
                             </div>
@@ -162,11 +161,11 @@
                                             >
                                                 <div class="dropdown-content">
                                                     <a class="dropdown-item">
-                                                        <i class="fas fa-photo-video"></i>&ensp;Photos &
-                                                        Videos
+                                                        Quote a Tour
                                                     </a>
                                                     <a class="dropdown-item">
-                                                        <i class="fas fa-file"></i>&ensp;Documents
+                                                        <i class="fas fa-photo-video"></i>&ensp;Photos &
+                                                        Videos
                                                     </a>
                                                 </div>
                                             </div>
