--- a/templates/chat.html
+++ b/templates/chat.html
@@ -50,8 +50,8 @@
                         <ul class="menu-list">
                             <!-- START: Horizontal Card -->
                             <li>
-                                <div class="box mt-4 has-background-primary-light">
-                                    <a>
+                                <div class="box mt-4 p-0 has-background-primary-light">
+                                    <a><div>
                                         <div class="p-2 listing-author">
                                             <div
                                                     class="profile-img"
@@ -59,6 +59,7 @@
                                             ></div>
                                             <div class="ml-2"><b>HideThePain69</b></div>
                                         </div>
+                                    </div>
                                     </a>
                                 </div>
                             </li>
@@ -66,8 +67,8 @@
 
                             <!-- START: Horizontal Card -->
                             <li>
-                                <div class="box mt-4">
-                                    <a>
+                                <div class="box mt-4 p-0">
+                                    <a><div>
                                         <div class="p-2 listing-author">
                                             <div
                                                     class="profile-img"
@@ -75,6 +76,7 @@
                                             ></div>
                                             <div class="ml-2"><b>HideThePain69</b></div>
                                         </div>
+                                    </div>
                                     </a>
                                 </div>
                             </li>
